# emissary

./: .gitignore  AGENTS.md  Cargo.toml  README.md
examples/: checkout.json  payment.json.example
src/: actions.rs  args.rs  browser_dom.rs  conversation.rs  daemon.rs  harness.rs  image_display.rs  main.rs  payment.rs  privacy.rs  review.rs  search.rs
