[package]
name = "emissary-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
headless_chrome = "1.0.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ctrlc = "3.4.7"
libc = "0.2.177"
viuer = { version = "0.11.0", features = ["print-file"], optional = true }
schemars = { version = "1.2.1", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }

[features]
default = ["terminal-images"]
terminal-images = ["dep:viuer"]
